Feat: configurating download folder selection

--- a/boxlayouts.kv
+++ b/boxlayouts.kv
@@ -92,6 +92,7 @@
                 background_normal:''
                 background_color: (250/255, 45/255, 30/255,1)
                 text: "Cancelar"
+                on_press: app.stop()
 
 
 
